# rolling-pin

./: .cruft.json  .devcontainer.json  .env  .gitattributes  .gitignore  LICENSE  MANIFEST  README.md  rolling-pin.code-workspace  setup.py
docker/: .dockerignore  dev.dockerfile  dev_requirements.txt  docker-compose.yml  frozen_requirements.txt  prod.dockerfile  prod_requirements.txt  requirements.txt  rolling_pin.dockerfile  tox.ini  zshrc
docker/config/: build.yaml  dev-env  prod.toml  pyproject.toml  pytest.ini  tox.ini  zshrc
docker/config/jupyter/: jupyter_lab_config.py
docker/dev/: pyproject.toml
docker/jupyter/: jupyter_lab_config.py  jupyter_notebook_config.py
docker/prod/: pyproject.toml
docker/scripts/: generate_pyproject.py  prod-cli  s_tools.sh  toml_gen.py  x-tools.sh  x_tools.sh
docs/: .buildinfo  all_metrics.html  cli.html  cyclomatic_complexity_metrics.html  genindex.html  halstead_metrics.html  index.html  intro.html  maintainability_metrics.html  modules.html  objects.inv  py-modindex.html  raw_metrics.html  readme.html  rolling_pin.html  search.html  searchindex.js
docs/.doctrees/: cli.doctree  environment.pickle  index.doctree  intro.doctree  modules.doctree  readme.doctree  rolling_pin.doctree
docs/_modules/: cli.html  index.html  logging.html
docs/_modules/rolling_pin/: app.html  blob_etl.html  conform_config.html  conform_etl.html  radon_etl.html  repo_etl.html  toml_etl.html  tools.html  utils.html
docs/_modules/schematics/: deprecated.html
docs/_modules/schematics/types/: base.html  compound.html
docs/_sources/: index.rst.txt  intro.rst.txt  modules.rst.txt  readme.md.txt  rolling_pin.rst.txt
docs/_static/: style.css
docs/htmlcov/: class_index.html  d_5a213bf3bfd38e31_app_py.html  d_5a213bf3bfd38e31_blob_etl_py.html  d_5a213bf3bfd38e31_conform_config_py.html  d_5a213bf3bfd38e31_conform_etl_py.html  d_5a213bf3bfd38e31_radon_etl_py.html  d_5a213bf3bfd38e31_repo_etl_py.html  d_5a213bf3bfd38e31_toml_etl_py.html  d_5a213bf3bfd38e31_tools_py.html  d_7425fd6b3488630e_app_py.html  d_7425fd6b3488630e_blob_etl_py.html  d_7425fd6b3488630e_conform_config_py.html  d_7425fd6b3488630e_conform_etl_py.html  d_7425fd6b3488630e_radon_etl_py.html  d_7425fd6b3488630e_repo_etl_py.html  d_7425fd6b3488630e_tools_py.html  d_8fb32630f238ff15_blob_etl_py.html  d_8fb32630f238ff15_conform_config_py.html  d_8fb32630f238ff15_conform_etl_py.html  d_8fb32630f238ff15_radon_etl_py.html  d_8fb32630f238ff15_repo_etl_py.html  d_8fb32630f238ff15_toml_etl_py.html  d_8fb32630f238ff15_tools_py.html  function_index.html  index.html  python_rolling_pin_app_py.html  python_rolling_pin_blob_etl_py.html  python_rolling_pin_radon_etl_py.html  python_rolling_pin_repo_etl_py.html  python_rolling_pin_tools_py.html  rolling_pin_app_py.html  rolling_pin_blob_etl_py.html  rolling_pin_radon_etl_py.html  rolling_pin_repo_etl_py.html  rolling_pin_tools_py.html  rolling_pin_utils_py.html  status.json  z_8fb32630f238ff15_blob_etl_py.html  z_8fb32630f238ff15_conform_config_py.html  z_8fb32630f238ff15_conform_etl_py.html  (+4 more)
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
notebooks/: build.ipynb  conform.ipynb  demo-blob.ipynb  demo-cli.ipynb  demo-conform.ipynb  demo.ipynb  etl.ipynb  package-stats.ipynb  prototype_demo.ipynb  toml.ipynb  web-scraping.ipynb
pip/: setup.py  tox.ini
python/: cli.py
python/rolling_pin/: __init__.py  app.py  blob_etl.py  blob_etl_test.py  cli.py  command.py  conform_config.py  conform_config_test.py  conform_etl.py  conform_etl_test.py  radon_etl.py  radon_etl_test.py  repo_etl.py  repo_etl_test.py  toml_etl.py  toml_etl_test.py  tools.py  tools_test.py  utils.py  utils_test.py
resources/: conform_data.csv
resources/conform_repo/docker/: fake-pyproject.toml
resources/conform_repo/python/bar/: __init__.py
resources/fake_repo/: foo.py
resources/fake_repo/bar/: baz.py
sphinx/: cli.rst  conf.py  index.rst  intro.rst  modules.rst  post_process_docs.py  rolling_pin.rst  style.css
