[project]
name = "rolling-pin<drop>"
version = "0.7.0"
description = "A library of generic tools for ETL work and visualization of JSON blobs and python repositories"
authors = [
    {name = "Alex Braun", email = "alexander.g.braun@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
# <replace>
requires-python = ">=3.10"
# requires-python = ">=3.7"
# </replace>
dependencies = [
    "click>=8.1.3",
    "cufflinks",
    "graphviz",
    "ipython",
    "lunchbox",
    "networkx",
    "numpy",
    "pandas>=1.1.5",
    "pydot",
    "pyyaml",
    "radon",
    "schematics",
    "wrapt",
]

[project.scripts]
rolling-pin = "rolling_pin.command:main"

[tool.pdm.dev-dependencies]
# <remove>
lab = [
    "cufflinks",
    "jupyterlab-git",
    "jupyterlab-henanigans>=0.2.2",
    "jupyterlab-sublime",
    "jupyterlab>=3.0.0",
]
dev = [
    "flake8",
    "mypy",
    "pdm",
    "pdm-bump",
    "sphinx-rtd-theme",
    "sphinx>=5.3.0",
    "toml>=0.10.2",
]
# </remove>
test = [
    "pytest-cov",
    "pytest-forked",
    "pytest-xdist",
    "pytest",
    "tox-pdm>=0.6.0",
    "tox>=3.26.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "flaky:Flaky test",
]

[tool.pytest.ini_options.report]
show_missing = true
omit = [
    "*/__init__.py",
    "*/*_test_base.py",
    "*/*_test.py",
    "*/*_tests.py",
    "*/cli.py",
    "*/mock_*.py",
    "*/conftest.py",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{10,9,8,7}
distdir = /home/ubuntu/build/dist
setupdir = /home/ubuntu/build/repo
toxworkdir = /home/ubuntu/build/tox
isolated_build = True

[testenv]
setenv =
    PYTHONPATH = ''
groups = test
commands = pytest rolling_pin -c pyproject.toml
"""

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_warn_no_return = true
pretty = true
warn_unused_ignores = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
