[project]
name = "rolling-pin"
version = "0.7.0"
description = "A library of generic tools for ETL work and visualization of JSON blobs and python repositories"
authors = [
    {name = "Alex Braun", email = "alexander.g.braun@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "click>=8.1.3",
    "cufflinks",
    "graphviz",
    "ipython",
    "lunchbox",
    "networkx",
    "numpy",
    "pandas>=1.1.5",
    "pydot",
    "pyyaml",
    "radon",
    "schematics",
    "wrapt",
]

[project.scripts]
rolling-pin = "rolling_pin.command:main"

[tool.pdm.dev-dependencies]
test = [
    "pytest-cov",
    "pytest-forked",
    "pytest-xdist",
    "pytest",
    "tox-pdm>=0.6.0",
    "tox>=3.26.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "flaky:Flaky test",
]

[tool.pytest.ini_options.report]
show_missing = true
omit = [
    "*/__init__.py",
    "*/*_test_base.py",
    "*/*_test.py",
    "*/*_tests.py",
    "*/cli.py",
    "*/mock_*.py",
    "*/conftest.py",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

